# purple

./: .env.example  .example.env  .gitignore  CLAUDE.md  Cargo.toml  README.md  REFACTOR_PLAN.md  build.sh  dev.sh
.claude/: settings.local.json
admin-frontend/: Cargo.toml  README.md  index.html
admin-frontend/src/: lib.rs
admin-frontend/src/components/: auth_guard.rs  common.rs  header.rs  layout.rs  mod.rs  sidebar.rs  theme_selector.rs  theme_toggle.rs
admin-frontend/src/pages/: announcements_management.rs  coupons.rs  dashboard.rs  home.rs  knowledge_management.rs  login.rs  mod.rs  nodes_management.rs  orders_management.rs  permissions_management.rs  plans.rs  queues_management.rs  routes_management.rs  subscriptions_management.rs  system_settings.rs  theme_settings.rs  tickets_management.rs  users.rs  users_management.rs
admin-frontend/src/services/: api.rs  auth.rs  coupon_service.rs  mod.rs
admin-frontend/src/utils/: storage.rs  theme.rs
admin-frontend/src/utils/theme/: css_generator.rs  hooks.rs  manager.rs  presets.rs  types.rs
backend/: Cargo.toml
backend/migrations/: add_server_tables.sql  fix_user_fields.sql  init.sql
backend/src/: app_state.rs  lib.rs  logging.rs  main.rs  routes.rs  startup.rs
backend/src/api/: admin.rs  auth.rs  coupon.rs  health.rs  info.rs  mod.rs  notice.rs  openapi.rs  order.rs  plan.rs  server.rs  subscribe.rs  ticket.rs  user.rs
backend/src/common/: error.rs  mod.rs  response_types.rs  response_v2.rs  status.rs
backend/src/config/: admin.rs  mod.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  request_logger.rs  request_timer.rs
backend/src/models/: auth.rs  coupon.rs  mod.rs  plan.rs  server.rs  subscribe.rs  ticket.rs  user.rs
backend/src/repositories/: coupon_repository.rs  mod.rs  plan_repository.rs  server_repository.rs  user_repository.rs
backend/src/services/: auth.rs  mod.rs
backend/src/utils/: mod.rs
docs/api/: README.md  authentication.md
docs/deployment/: docker.md
docs/development/: architecture.md  setup.md
docs/examples/: client-examples.md
frontend/: Cargo.toml  index.html  temp-index.html
frontend/src/: lib.rs
frontend/src/components/: error.rs  header.rs  layout.rs  loading.rs  mod.rs
frontend/src/pages/: home.rs  login.rs  mod.rs
frontend/src/services/: auth.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app_state.rs  lib.rs  main.rs  routes.rs  startup.rs
src/api/: auth.rs  coupon.rs  health.rs  info.rs  info_v2.rs  middleware.rs  mod.rs  openapi.rs  plan.rs  response.rs  subscribe.rs  subscription.rs  user.rs
src/common/: error.rs  mod.rs  response.rs  response_v2.rs  status.rs
src/config/: database.rs  mod.rs
src/middleware/: auth.rs  cors.rs  mod.rs  request_logger.rs  request_timer.rs
src/models/: auth.rs  coupon.rs  info.rs  mod.rs  notice.rs  order.rs  plan.rs  subscription.rs  user.rs
src/repositories/: mod.rs  user_repository.rs
src/services/: auth.rs  auth_service.rs  mod.rs
src/utils/: mod.rs
tests/repositories/: test_plan_repository.rs
user-frontend/: Cargo.toml  index.html
user-frontend/src/: lib.rs
user-frontend/src/components/: error.rs  header.rs  layout.rs  loading.rs  mod.rs
user-frontend/src/pages/: home.rs  login.rs  mod.rs
user-frontend/src/services/: api.rs  auth.rs  mod.rs
user-frontend/src/utils/: storage.rs
