[package]
name = "purple"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenv = "0.15"
jsonwebtoken = "8.3"
argon2 = "0.5"
rand = "0.8"
config = "0.15.11"
actix-web = "4.11.0"
futures-util = "0.3.31"
actix-http = "3.11.0"
utoipa = "3.5.0"
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
