[workspace]
members = [
    "backend",
    "admin-frontend", 
    "user-frontend",
    "shared"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Purple Team <team@purple-project.com>"]
license = "MIT"
repository = "https://github.com/your-org/purple"
homepage = "https://github.com/your-org/purple"

# Workspace 级别的 lint 配置
[workspace.lints.rust]
# 允许常见的开发中的警告
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"

[workspace.lints.clippy]
# 启用重要的 clippy 检查
all = "warn"
# 禁用过于严格的检查
pedantic = "allow"
nursery = "allow"

[workspace.dependencies]
# 共享的依赖版本管理
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde", "js"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# 后端特定依赖
actix-web = "4.11.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
utoipa = "3.5.0"
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
jsonwebtoken = "8.3"
argon2 = "0.5"

# 前端特定依赖
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_log = "1"
console_error_panic_hook = "0.1"